--- a/index.html
+++ b/index.html
@@ -8,33 +8,67 @@
     <title>Chat App</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/chatBubble.css">
+    <style>
+        #footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 
-<body>
-    <div class="container"
-        style="border: 1px solid black; width: 200px; width: 100%; height: 400px; border-radius: 10px; overflow-y: auto; text-align: center;">
-        <div id="message-container"></div>
+<body style="text-align: center;">
+    <!-- <div class="container"
+        style="border: 1px solid black; width: 200px; width: 100%; height: 400px; border-radius: 10px; overflow-y: auto; text-align: center;"> -->
+    <div id="message-container">
+
+        <div class="talk-bubble tri-right border round btm-left-in" style="float: left; width: 50%; background-color: greenyellow;">
+            <div class="talktext">
+                <p>Now we add a border and it looks like a comic. Uses .border .round and .btm-left-in</p>
+            </div>
+        </div>
+
+        <div class="talk-bubble border" style="width: 50%; display: inline-block; background-color: yellow;">
+            <div class="talktext" style="text-align: center;">
+                <p>Carl Joined</p>
+            </div>
+        </div>
+
+        <div class="talk-bubble tri-right border round btm-right-in" style="float: right; width: 50%; background-color: lightgreen;">
+            <div class="talktext">
+                <p>Now we add a border and it looks like a comic. Uses .border .round and .btm-left-in</p>
+            </div>
+        </div>
+
     </div>
+    <!-- </div> -->
 
     <br />
 
-    <div class="container ">
-
-        <!-- <form id="send-container"> -->
-            <div class="row">
+    <!-- <form id="send-container"> -->
+            <!-- <div >
                 <div class="col-1"> 
 
                 </div>
                 <div class="col-8">
-                    <input type="text" class="form-control" id="message-input">
+                    <input type="text" class="form-control mr-1" id="message-input">
                 </div>
                 <div class="col-1">
                     <button type="submit" class="btn btn-primary mb-2 ml-1" id="send-button">Send</button>
                 </div>
-            </div>
-        <!-- </form> -->
+            </div> -->
 
+    <div id="footer" class="d-flex justify-content-center">
+        <div class="container">
+            <div class="d-flex">
+                <input type="text" class="form-control mr-1" id="message-input">
+                <button type="submit" class="btn btn-primary" id="send-button">Send</button>
+            </div>
+        </div>
     </div>
+    <!-- </form> -->
 
 </body>
 
