--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         style="border: 1px solid black; width: 200px; width: 100%; height: 400px; border-radius: 10px; overflow-y: auto; text-align: center;"> -->
     <div id="message-container">
 
-        <div class="talk-bubble tri-right border round btm-left-in" style="float: left; width: 50%; background-color: greenyellow;">
+        <!-- <div class="talk-bubble tri-right border round btm-left-in" style="float: left; width: 50%; background-color: greenyellow;">
             <div class="talktext">
                 <p>Now we add a border and it looks like a comic. Uses .border .round and .btm-left-in</p>
             </div>
@@ -40,7 +40,7 @@
             <div class="talktext">
                 <p>Now we add a border and it looks like a comic. Uses .border .round and .btm-left-in</p>
             </div>
-        </div>
+        </div> -->
 
     </div>
     <!-- </div> -->
