--- a/index.html
+++ b/index.html
@@ -9,46 +9,38 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/chatBubble.css">
-    <style>
-        #footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            margin-bottom: 15px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body style="text-align: center;">
-    <!-- <div class="container"
-        style="border: 1px solid black; width: 200px; width: 100%; height: 400px; border-radius: 10px; overflow-y: auto; text-align: center;"> -->
     <div id="message-container">
 
-        <!-- <div class="talk-bubble tri-right border round btm-left-in" style="float: left; width: 50%; background-color: greenyellow;">
+        <!-- <div class="talk-bubble tri-right border round btm-left-in animate__animated animate__lightSpeedInLeft"
+            style="float: left; width: 50%; background-color:  lightgreen;">
             <div class="talktext">
                 <p>Now we add a border and it looks like a comic. Uses .border .round and .btm-left-in</p>
             </div>
         </div>
 
-        <div class="talk-bubble border" style="width: 50%; display: inline-block; background-color: yellow;">
+        <div class="talk-bubble border animate__animated animate__bounceIn" style="width: 50%; display: inline-block; background-color: yellow;">
             <div class="talktext" style="text-align: center;">
                 <p>Carl Joined</p>
             </div>
         </div>
 
-        <div class="talk-bubble tri-right border round btm-right-in" style="float: right; width: 50%; background-color: lightgreen;">
+        <div class="talk-bubble tri-right border round btm-right-in animate__animated animate__lightSpeedInRight"
+            style="float: right; width: 50%; background-color:lightblue;">
             <div class="talktext">
                 <p>Now we add a border and it looks like a comic. Uses .border .round and .btm-left-in</p>
             </div>
         </div> -->
 
     </div>
-    <!-- </div> -->
 
     <br />
 
     <!-- <form id="send-container"> -->
-            <!-- <div >
+    <!-- <div >
                 <div class="col-1"> 
 
                 </div>
@@ -60,7 +52,7 @@
                 </div>
             </div> -->
 
-    <div id="footer" class="d-flex justify-content-center">
+    <div id="footer" class="d-flex justify-content-center animate__animated animate__slideInUp" style="position: fixed; bottom: 0; width: 100%; margin-bottom: 15px;">
         <div class="container">
             <div class="d-flex">
                 <input type="text" class="form-control mr-1" id="message-input">
